<!--
  Copyright (c) 2023, Oracle and/or its affiliates.
   Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
-->
<resources>
    <string name="app_name">Cafe Blog</string>
    <string name="sdk_error">SDK Error</string>
    <string name="sdk_init_error">SDK Initialization error</string>
    <string name="posted_date">Posted on %1$s</string>
    <string name="blog_topics">Supremo</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_contactus">Contact Us</string>

    <string name="article_title">Article</string>
</resources>
